--- a/y3/sem_b/android/app/src/main/res/layout/activity_main.xml
+++ b/y3/sem_b/android/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:layout_weight="3">
+        android:layout_weight="1">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,25 +25,89 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/Pickle_rick_transparent"/>
+            android:src="@drawable/pickle_rick_transparent"
+            />
 
     </LinearLayout>
 
-    <LinearLayout
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical"
-        android:background="#ffffff"
+        android:background="#fff"
+        android:columnCount="2"
+        android:rowCount="3">
+
+        <TextView
+            android:id="@+id/phone_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="Phone number:"
+            android:layout_gravity="left"
+            />
+
+        <TextView
+            android:id="@+id/phone_number_det"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="0506468531"
+            android:layout_gravity="right"
+            />
+
+        <TextView
+            android:id="@+id/address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="Address:"
+            android:layout_gravity="left"
+            />
+
+        <TextView
+            android:id="@+id/address_det"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="Washington, USA, Earth"
+            android:layout_gravity="right"
+            />
+
+        <TextView
+            android:id="@+id/contact_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="Contact Name:"
+            android:layout_gravity="left"
+            />
+
+        <TextView
+            android:id="@+id/contact_name_det"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="Morty"
+            android:layout_gravity="right"
+            />
+
+    </GridLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="#0f0"
         >
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:text="Phone number:"
-            />
-
-
-    </LinearLayout>
+            android:gravity="center"
+            android:text="A pickle for every advanture"
+            android:textSize="50sp" />
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.LinearLayoutCompat>
