--- a/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_main.xml
+++ b/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:onClick="start_quiz"
         />
 
 </android.support.constraint.ConstraintLayout>
