--- a/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_question_main.xml
+++ b/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_question_main.xml
@@ -8,22 +8,19 @@
     android:orientation="vertical">
 
 
-    <android.support.v7.widget.LinearLayoutCompat
-        android:layout_weight="3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v7.widget.LinearLayoutCompat>
-
-    <android.support.v7.widget.LinearLayoutCompat
-        android:layout_weight="1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <android.support.v4.view.ViewPager
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/q_pager">
+            android:id="@+id/q_pager"
+            android:layout_weight="1">
         </android.support.v4.view.ViewPager>
+
+    <android.support.v7.widget.LinearLayoutCompat
+        android:layout_weight="3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     </android.support.v7.widget.LinearLayoutCompat>
 
 
