--- a/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_main.xml
+++ b/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start!"
+        android:textSize="40sp"
+        android:background="@android:color/holo_red_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
