Added callback ability to the fragemants.

--- a/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_main.xml
+++ b/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,13 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:onClick="start_quiz"
+        android:id="@+id/start_button"
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="50sp"
+        android:text="Stam mashu"
+        android:id="@+id/text_id"/>
 </android.support.constraint.ConstraintLayout>
