--- a/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_question_main.xml
+++ b/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_question_main.xml
@@ -19,16 +19,22 @@
         android:layout_weight="3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:textDirection="rtl">
+        android:orientation="vertical">
 
-        <android.support.v7.widget.AppCompatTextView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="אני לֹא זז!!!"
-            android:textDirection="rtl"
-            android:textColor="@android:color/holo_orange_dark"
-            android:textSize="35sp" />
+            android:text="The Number of correct answers would be written here"
+            android:textSize="20sp"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0/5"
+            android:textSize="30sp"
+            android:layout_gravity="center"
+            android:id="@+id/answers_progress"/>
 
     </android.support.v7.widget.LinearLayoutCompat>
 
