--- a/y3/sem_b/quiz_hw2/app/src/main/res/layout/fragment_question_frag.xml
+++ b/y3/sem_b/quiz_hw2/app/src/main/res/layout/fragment_question_frag.xml
@@ -69,9 +69,9 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Answer"
+            android:text="save answer"
             android:layout_margin="3dp"
-            android:id="@+id/answer"
+            android:id="@+id/save_answer"
             android:layout_gravity="center_horizontal" />
     </LinearLayout>
    
