--- a/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_question_main.xml
+++ b/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_question_main.xml
@@ -4,22 +4,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".QuestionMain"
+    android:background="@drawable/riddler_bg"
     android:orientation="vertical">
 
 
 
         <android.support.v4.view.ViewPager
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:id="@+id/q_pager"
-            android:layout_weight="1">
+            android:layout_weight="4">
         </android.support.v4.view.ViewPager>
 
     <android.support.v7.widget.LinearLayoutCompat
-        android:layout_weight="3"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:layout_weight="2"
+        >
+
+
 
         <TextView
             android:layout_width="wrap_content"
