Moved buttons from QuestionFrag to the QuestionMain.

--- a/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_question_main.xml
+++ b/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_question_main.xml
@@ -7,41 +7,78 @@
     android:background="@drawable/riddler_bg"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:id="@+id/outcome_layout"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="4">
 
+            <TextView
+                android:layout_weight="1"
+                android:id="@+id/outcome_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="40dp"
+                android:text="this is temporary text"/>
 
-        <android.support.v4.view.ViewPager
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:id="@+id/q_pager"
-            android:layout_weight="4">
-        </android.support.v4.view.ViewPager>
+            <TextView
+                android:id="@+id/outcome_number"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="40dp"
+                android:text="0/5"
+                android:gravity="center"/>
 
-    <android.support.v7.widget.LinearLayoutCompat
+    </LinearLayout>
+
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:orientation="vertical"
+        android:id="@+id/q_pager"
+        android:layout_weight="4"
+        android:visibility="visible">
+    </android.support.v4.view.ViewPager>
+
+    <RelativeLayout
+        android:id="@+id/button_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
         android:layout_weight="2"
+        android:visibility="visible"
         >
 
-
-
-        <TextView
+        <Button
+            android:layout_alignParentLeft="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="The Number of correct answers would be written here"
-            android:textSize="20sp"
-            android:layout_gravity="center"/>
+            android:text="Finish"
+            android:textSize="26sp"
+            android:padding="10dp"
+            android:layout_margin="3dp"
+            android:id="@+id/finish"/>
 
-        <TextView
+        <Button
+            android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0/5"
-            android:textSize="30sp"
-            android:layout_gravity="center"
-            android:id="@+id/answers_progress"/>
+            android:text="Next\nquestion"
+            android:textSize="28sp"
+            android:padding="10dp"
+            android:layout_margin="3dp"
+            android:id="@+id/nextQuestion"/>
 
-    </android.support.v7.widget.LinearLayoutCompat>
+        <TextView
+            android:text="slide left to return to the previous question"
+            android:textSize="30dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-
+    </RelativeLayout>
 
 </android.support.v7.widget.LinearLayoutCompat>
