--- a/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_question_main.xml
+++ b/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_question_main.xml
@@ -10,25 +10,28 @@
     <LinearLayout
         android:id="@+id/outcome_layout"
         android:visibility="gone"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:gravity="center"
         android:layout_weight="4">
 
             <TextView
                 android:layout_weight="1"
                 android:id="@+id/outcome_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="40dp"
-                android:text="this is temporary text"/>
+                android:layout_margin="7dp"
+                android:textAlignment="center"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:textSize="40sp"
+                android:text="this is \ntemporary text"/>
 
             <TextView
                 android:id="@+id/outcome_number"
                 android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="40dp"
+                android:layout_height="0dp"
+                android:textSize="40sp"
                 android:text="0/5"
                 android:gravity="center"/>
 
@@ -52,29 +55,31 @@
         >
 
         <Button
-            android:layout_alignParentLeft="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Finish"
-            android:textSize="26sp"
+            android:visibility="gone"
+            android:textSize="28sp"
             android:padding="10dp"
             android:layout_margin="3dp"
+            android:layout_centerHorizontal="true"
             android:id="@+id/finish"/>
 
         <Button
-            android:layout_alignParentRight="true"
+            android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Next\nquestion"
+            android:text="Save Answer"
             android:textSize="28sp"
             android:padding="10dp"
             android:layout_margin="3dp"
             android:id="@+id/nextQuestion"/>
 
         <TextView
-            android:text="slide left to return to the previous question"
-            android:textSize="30dp"
-            android:layout_alignParentLeft="true"
+            android:text=" SLIDE LEFT OR RIGHT "
+            android:textSize="28sp"
+            android:layout_margin="7dp"
+            android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
