--- a/y3/sem_b/quiz_hw2/app/src/main/res/layout/fragment_question_frag.xml
+++ b/y3/sem_b/quiz_hw2/app/src/main/res/layout/fragment_question_frag.xml
@@ -9,13 +9,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="2">
+        android:layout_height="0dp"
+        android:layout_weight="3">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Question"
+            android:hint="Fetching Questions..."
+            android:textSize="28sp"
+            android:layout_margin="7dp"
             android:gravity="center"
             android:id="@+id/question"
             />
@@ -24,8 +26,8 @@
     
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_height="0dp"
+        android:layout_weight="2"
         android:orientation="vertical">
 
         <RadioGroup
@@ -37,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="this is option 1"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:layout_margin="3dp"
                 android:id="@+id/opt1"
                 />
@@ -45,7 +47,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="this is option 2"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:layout_margin="3dp"
                 android:id="@+id/opt2"
                 />
@@ -53,7 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="this is option 3"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:layout_margin="3dp"
                 android:id="@+id/opt3"
                 />
@@ -61,7 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="this is option 4"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 android:layout_margin="3dp"
                 android:id="@+id/opt4"
                 />
