Computer vision hw almost finished

--- a/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_question_main.xml
+++ b/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_question_main.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".QuestionMain"
     android:background="@drawable/riddler_bg"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layoutDirection="ltr"
+    >
 
 
 
