--- a/y3/sem_b/quiz_hw2/app/src/main/res/layout/fragment_question_frag.xml
+++ b/y3/sem_b/quiz_hw2/app/src/main/res/layout/fragment_question_frag.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".QuestionFrag"
     android:orientation="vertical"
+    android:layoutDirection="ltr"
     >
 
     <LinearLayout
