--- a/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_main.xml
+++ b/y3/sem_b/quiz_hw2/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity"
     android:orientation="vertical"
     android:weightSum="2"
+    android:layoutDirection="ltr"
     android:background="@drawable/riddler_bg"
 
     >
