--- a/y3/sem_b/android/kotelmania/app/src/main/res/layout/list_item.xml
+++ b/y3/sem_b/android/kotelmania/app/src/main/res/layout/list_item.xml
@@ -1,33 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
-    android:padding="10dp">
+    android:padding="7dp">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="כותרת"
-        android:textSize="26sp"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@+id/status"
-        />
-    <TextView
-        android:id="@+id/content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="תוכן תוכן תוכן"
-        android:layout_below="@+id/title"
-        android:textSize="26sp"/>
-    <TextView
-        android:id="@+id/status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="סטאטוס"
-        android:layout_alignParentEnd="true"
-        android:textSize="26sp"/>
+<TextView
+    android:id="@+id/title"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:hint="כותרת"
+    android:textSize="26sp"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:layout_toStartOf="@+id/status"
+    />
+<TextView
+    android:id="@+id/content"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:hint="תוכן תוכן תוכן"
+    android:layout_below="@+id/title"
+    android:textSize="26sp"/>
+<TextView
+    android:id="@+id/status"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:hint="סטאטוס"
+    android:gravity="left"
+    android:layout_alignParentEnd="true"
+    android:layout_alignParentTop="true"
+    android:textSize="26sp"/>
 
 
 </RelativeLayout>
