--- a/y3/sem_b/android/kotelmania/app/src/main/res/layout/list_item.xml
+++ b/y3/sem_b/android/kotelmania/app/src/main/res/layout/list_item.xml
@@ -11,6 +11,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:hint="כותרת"
+    android:textStyle="bold"
+    android:layout_marginEnd="7dp"
     android:textSize="26sp"
     android:layout_alignParentStart="true"
     android:layout_alignParentTop="true"
@@ -20,15 +22,19 @@
     android:id="@+id/content"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:hint="תוכן תוכן תוכן"
+    android:hint="ללא תוכן"
     android:layout_below="@+id/title"
     android:textSize="26sp"/>
 <TextView
     android:id="@+id/status"
+    android:textStyle="italic"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:hint="סטאטוס"
-    android:gravity="left"
+    android:hint="נשלח"
+    android:paddingStart="5dp"
+    android:paddingEnd="5dp"
+    android:background="@android:color/darker_gray"
+    android:textAlignment="viewEnd"
     android:layout_alignParentEnd="true"
     android:layout_alignParentTop="true"
     android:textSize="26sp"/>
