Android - progressed with hw

--- a/y3/sem_b/android/kotelmania/app/src/main/res/layout/activity_edit_note.xml
+++ b/y3/sem_b/android/kotelmania/app/src/main/res/layout/activity_edit_note.xml
@@ -7,6 +7,7 @@
     android:layoutDirection="rtl"
     android:padding="7dp"
     android:fitsSystemWindows="true"
+    android:background="@drawable/note_bk"
     >
 
     <include layout="@layout/content_edit_note" />
